Update edit and editor plug-in classes in Domain Model
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -198,3 +198,10 @@ _UI_Notifier_type = Notifier
 _UI_NotifyingInternalEListImpl_type = Notifying Internal EList Impl
 _UI_LoadingEList_type = Loading EList
 _UI_EList_type = EList
+_UI_Models_type = Models
+_UI_EMFPlugin_type = EMF Plugin
+_UI_Models_dynamic_feature = Dynamic
+_UI_Models_generated_feature = Generated
+_UI_Models_generatedEdit_feature = Generated Edit
+_UI_Models_generatedEditor_feature = Generated Editor
+_UI_Models_parent_feature = Parent
