--- a/bundles/org.enterprisedomain.classmaker.edit/build.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/build.properties
@@ -15,6 +15,8 @@
 bin.includes = .,\
                icons/,\
                META-INF/,\
+               plugin.xml,\
                plugin.properties
 jars.compile.order = .
 source.. = src/
+output.. = bin/
