Correct Make activation nature
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.workbench/plugin.xml
+++ b/bundles/org.enterprisedomain.workbench/plugin.xml
@@ -120,7 +120,7 @@
                               type="org.eclipse.core.resources.IProject">
                            <test
                                  property="org.eclipse.core.resources.projectNature"
-                                 value="org.enterprisedomain.classmaker.projectNature">
+                                 value="org.enterprisedomain.classmaker.contributionProjectNature">
                            </test>
                         </adapt>
                         <adapt
@@ -154,7 +154,7 @@
                               type="org.eclipse.core.resources.IProject">
                            <test
                                  property="org.eclipse.core.resources.projectNature"
-                                 value="org.enterprisedomain.classmaker.projectNature">
+                                 value="org.enterprisedomain.classmaker.contributionProjectNature">
                            </test>
                         </adapt>
                         <adapt
