--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -110,7 +110,7 @@
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho.extras</groupId>
-				<artifactId>tycho-source-plugin</artifactId>
+				<artifactId>tycho-source-feature-plugin</artifactId>
 				<version>${tycho.extras.version}</version>
 				<executions>
 					<execution>
