--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
@@ -52,12 +50,12 @@
 							<type>target</type>
 						</artifact>
 					</target>
-					<executionEnvironment>JavaSE-11</executionEnvironment>
+					<executionEnvironment>JavaSE-17</executionEnvironment>
 					<resolver>p2</resolver>
 					<dependency-resolution>
 						<profileProperties>
+							<org.eclipse.justj.buildtime>true</org.eclipse.justj.buildtime>
 							<org.eclipse.swt.buildtime>true</org.eclipse.swt.buildtime>
-							<executionEnvironment>JavaSE-11</executionEnvironment>
 						</profileProperties>
 						<extraRequirements>
 							<requirement>
@@ -69,12 +67,12 @@
 								<type>eclipse-feature</type>
 								<groupId>org.enterprisedomain</groupId>
 								<artifactId>org.enterprisedomain.ui.workbench.rcp.feature</artifactId>
-							<version>0.8.46-SNAPSHOT</version>
+								<version>0.8.46-SNAPSHOT</version>
 							</requirement>
 							<requirement>
 								<type>eclipse-plugin</type>
 								<artifactId>org.enterprisedomain.classmaker.osgi.systemextension</artifactId>
-							<version>0.8.46-SNAPSHOT</version>
+								<version>0.8.46-SNAPSHOT</version>
 							</requirement>
 						</extraRequirements>
 					</dependency-resolution>
