--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.root</artifactId>
-		<version>0.8.46-SNAPSHOT</version>
+		<version>0.8.55-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
 	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.target</artifactId>
-	<version>0.8.46-SNAPSHOT</version>
+	<version>0.8.55-SNAPSHOT</version>
 	<packaging>eclipse-target-definition</packaging>
 	<build>
 		<plugins>
@@ -45,12 +45,12 @@
 						<artifact>
 							<groupId>org.enterprisedomain</groupId>
 							<artifactId>org.enterprisedomain.target</artifactId>
-							<version>0.8.46-SNAPSHOT</version>
+							<version>0.8.55-SNAPSHOT</version>
 							<file>../releng/org.enterprisedomain.target/org.enterprisedomain.target.target</file>
 							<type>target</type>
 						</artifact>
 					</target>
-					<executionEnvironment>JavaSE-17</executionEnvironment>
+					<executionEnvironment>org.eclipse.justj.openjdk.hotspot.jre.full-17</executionEnvironment>
 					<resolver>p2</resolver>
 					<dependency-resolution>
 						<profileProperties>
@@ -67,12 +67,12 @@
 								<type>eclipse-feature</type>
 								<groupId>org.enterprisedomain</groupId>
 								<artifactId>org.enterprisedomain.ui.workbench.rcp.feature</artifactId>
-								<version>0.8.46-SNAPSHOT</version>
+								<version>0.8.55-SNAPSHOT</version>
 							</requirement>
 							<requirement>
 								<type>eclipse-plugin</type>
 								<artifactId>org.enterprisedomain.classmaker.osgi.systemextension</artifactId>
-								<version>0.8.46-SNAPSHOT</version>
+								<version>0.8.55-SNAPSHOT</version>
 							</requirement>
 						</extraRequirements>
 					</dependency-resolution>
