--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -6,4 +6,4 @@ open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
-custom: [ "https://liberapay.com/kirill/donate", "https://money.yandex.ru/to/4100115600714785" ]
+custom: [ "https://liberapay.com/kirill/donate", "https://yoomoney.ru/to/4100115600714785" ]
