--- a/bundles/org.enterprisedomain.workbench/plugin_customization.ini
+++ b/bundles/org.enterprisedomain.workbench/plugin_customization.ini
@@ -1,2 +1,2 @@
-org.eclipse.ui/defaultPerspectiveId=org.eclipse.emf.ecp.application3x.perspective
+org.eclipse.ui/defaultPerspectiveId=org.eclipse.emf.cdo.explorer.ui.CDOExplorerPerspective
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP = false
