--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -214,3 +214,5 @@ _UI_Workspace_nonExclusiveCustomizers_feature = Non Exclusive Customizers
 _UI_State_excludedEPackages_feature = Excluded EPackages
 _UI_Workspace_excludedEPackages_feature = Excluded EPackages
 _UI_State_basePackage_feature = Base Package
+_UI_Workspace_classLoader_feature = Class Loader
+_UI_Project_classLoader_feature = Class Loader
