--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '17'
+        maven-version: '3.9'
     - name: Copy toolchain      
       run: |
        mkdir -p ~/.m2/
